# micom

./: .coveragerc  .gitattributes  .gitignore  .travis.yml  MANIFEST.in  NEWS.html  NEWS.md  README.rst  appveyor.yml  community.html  elasticities.html  genindex.html  growth_fluxes.html  high_level.html  index.html  installing.html  installing.ipynb  interactions.html  logic.html  logic.ipynb  media.html  micom.data.html  micom.html  micom.viz.html  micom.workflows.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  taxa_knockouts.html  tutorials.html  viz.html  workflow_README.md  workflows.html
_modules/: index.html
_sources/: NEWS.md.txt  growth_fluxes.ipynb.txt  index.rst.txt  installing.ipynb.txt  interactions.ipynb.txt  micom.viz.rst.txt  modules.rst.txt  tutorials.md  viz.ipynb  viz.ipynb.txt  workflows.ipynb  workflows.ipynb.txt
_static/: documentation_options.js  mes.html  niche.html  tradeoff.html
autoapi/: index.html
config/: config.yaml
docs/: Makefile  Test.html  community.html  elasticities.html  elasticities.ipynb  genindex.html  growth_fluxes.html  high_level.html  high_level.ipynb  index.html  installing.html  logic.html  make.bat  media.html  media.ipynb  micom.data.html  micom.html  micom.viz.html  micom.workflows.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  taxa_knockouts.html  taxa_knockouts.ipynb  viz.html  viz.ipynb  workflows.html
mico/: __init__.py  _version.py  algorithms.py  community.py  logger.py  problems.py  util.py
micom/: __init__.py  _version.py  algorithms.py  annotation.py  community.py  constants.py  coupling.py  db.py  deps.py  duality.py  elasticity.py  logger.py  measures.py  media.py  optcom.py  problems.py  qiime_formats.py  solution.py  stats.py  taxonomy.py  util.py  workflow_examples.py  workflows.py
source/: NEWS.md  community.ipynb  conf.py  index.rst  tutorials.md
tests/: fixtures.py  test_algorithms.py  test_annotations.py  test_community.py  test_db.py  test_db_media.py  (+19 more)
(+212 files in other folders)
