[bumpversion]
current_version = 0.32.5
commit = True
tag = True

[metadata]
name = micom
description = Microbial community modeling based on cobrapy.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/micom-dev/micom
author = Christian Diener
author_email = mail@cdiener.com
license = Apache License 2.0
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering :: Bio-Informatics
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
keywords = 
	microbiome
	microbiota
	modeling
	metabolism
	community
	metabolic modeling

[options]
packages = find:
zip_safe = True
python_requires = >=3.7
install_requires = 
	cobra>=0.26.2
	jinja2>=2.10.0
	scikit-learn>=0.24.1
	scipy>=1.8.1
	symengine>=0.6.1
	osqp>=0.6.2
tests_require = 
	coverage
	pytest
	pytest-cov

[options.packages.find]
exclude = 
	docs
	tests

[options.package_data]
micom = 
	data/*.csv
	data/*.gz
	data/templates/*.*
	data/artifacts/*.*

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:micom/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[tool:pytest]
filterwarnings = 
	ignore::DeprecationWarning
	ignore::FutureWarning

[bdist_wheel]
universal = 0

[coverage:run]
source = micom
branch = True

[coverage:report]
exclude_lines = 
	pragma: no cover
	
	def __repr__
	if self\.debug
	
	raise AssertionError
	raise NotImplementedError
	
	if 0:
	if __name__ == .__main__.:
ignore_errors = True

[flake8]
exclude = tests/*, docs/*, versioneer.py, _version.py
max-line-length = 88
ignore = 
	E203
	W503
	D202

[pydocstyle]
convention = numpy
